# knightcrawler

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  docker-compose-metrics.yml  docker-compose.yaml  docker-compose.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: base_image_workflow.yaml  build-docs.yaml  build_addon.yaml  build_consumer.yaml  build_debrid_collector.yaml  build_docs.yaml  build_images.yaml  build_jackett-addon.yaml  build_metadata.yaml  build_migrator.yaml  build_producer.yaml  build_qbit_collector.yaml  build_tissue.yaml  build_torrent_ingester.yaml  docker-image.yml  git_cliff.yml
addon/: package-lock.json  package.json
addon/lib/: configuration.js  manifest.js
annatar/torrent_ingestor/: pyproject.toml
annatar/torrent_ingestor/torrent_ingestor/: main.py
deployment/docker/: .env  .env.example  Caddyfile  compose.yaml  docker-compose-advanced.yaml  docker-compose-caddy.yaml  docker-compose-metrics.yml  docker-compose.yaml  stack.env
deployment/k8s/: Chart.yaml  values.yaml
docs/Writerside/: kc.tree  writerside.cfg
env/: addon.env  consumer.env  producer.env
grafana/: datasource.yml
prometheus/: prometheus.yml
scraper/: package-lock.json  package.json
scraper/scheduler/: scrapers.js
src/addon/: Dockerfile  esbuild.js  package-lock.json  package.json
src/addon-jackett/: Dockerfile  build.sh  ecosystem.config.cjs  package-lock.json  package.json
src/consumer/: .eslintrc  esbuild.ts  package-lock.json  package.json  tsconfig.json
src/debrid-collector/: DebridCollector.csproj  DebridCollector.sln  Dockerfile  GlobalUsings.cs  Program.cs  requirements.txt
src/metadata/: Dockerfile  GlobalUsings.cs  Metadata.csproj  Program.cs
src/migrator/: .pgmigrate.yaml  Dockerfile  entrypoint.sh
src/node/: package-lock.json  package.json
src/producer/: .dockerignore  Dockerfile  GlobalUsings.cs  Producer.csproj  Producer.sln  Program.cs
src/qbit-collector/: Dockerfile  GlobalUsings.cs  Program.cs  QBitCollector.csproj  QBitCollector.sln  requirements.txt
src/shared/: GlobalUsings.cs  SharedContracts.csproj
src/tissue/: Dockerfile  GlobalUsings.cs  Program.cs  Tissue.csproj
src/torrent-consumer/: Dockerfile  GlobalUsings.cs  (+3 more)
src/torrent-ingestor/: Dockerfile  pyproject.toml
src/torrent-ingestor/torrent_ingestor/: main.py
(+854 files in other folders)
