[tool.poetry]
name = "torrent-ingestor"
version = "0.1.0"
description = "Annatar Torrent Ingestor"
authors = ["Brett <eruiluvatar@pnbx.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.3"
pydantic = "^2.6.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
databases = {extras = ["postgresql"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
pyright = "^1.1.354"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
